acvus-mir-test/tests/snapshots/all__e2e__match_bool_literal.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "on\n"
  T2 = "off\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @flag
     3 |   assign <template> = T0
     4 |   if r1 -> L0 else L2 join L1
     5 | L0:
     6 |   r2 = const_str T1
     7 |   r3 = ref &mut <template>
     8 |   append r3 r2
    10 |   jump L1(() (r4))
    11 | L2:
    12 |   r5 = const_str T2
    13 |   r6 = ref &mut <template>
    14 |   append r6 r5
    16 |   jump L1(() (r7))
    17 | L1(r8: Unit):
    18 |   r9 = take <template>
    19 |   commit @flag = r1
    20 |   return r9

    ; r0 (v15) : Bool
    ; r1 (@flag) : Bool
    ; r2 (v6) : &str
    ; r3 (<template>.) : &mut String
    ; r4 (v8) : Unit
    ; r5 (v9) : &str
    ; r6 (<template>.) : &mut String
    ; r7 (v11) : Unit
    ; r8 (v12) : Unit
    ; r9 (v13) : String
    ; r10 (v3) : String
    ; r11 (v14) : Bool
    ; r12 (@flag) : Bool
    ; r13 (<template>) : String
    ; r14 (@flag) : Bool
    ; r15 (v16) : Bool
