acvus-mir-test/tests/snapshots/all__e2e__match_literal_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = "admin page"
  T1 = "guest page"

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @role
     2 | L2:
     3 |   r2 = test r1 == "admin"
     4 |   jump_if r2 then L3 else L1
     5 | L3:
     6 |   r3 = const_str T0
     7 |   r4 = string_concat [r3]
     8 |   jump L0(r4)
     9 | L1:
    10 |   r5 = const_str T1
    11 |   r6 = string_concat [r5]
    12 |   jump L0(r6)
    13 | L0(r7: String):
    14 |   r8 = string_concat [r7]
    15 |   commit @role = r1
    16 |   return r8

    ; r0 (v12) : String
    ; r1 (@role) : String
    ; r2 (v4) : Bool
    ; r3 (v5) : &str
    ; r4 (v6) : String
    ; r5 (v7) : &str
    ; r6 (v8) : String
    ; r7 (v9) : String
    ; r8 (v10) : String
    ; r9 (v11) : String
    ; r10 (v3) : String
    ; r11 (v13) : String
    ; r12 (@role) : String
