acvus-mir-test/tests/snapshots/all__e2e__mixed_text_and_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "Hello, "
  T2 = "!"

=== main ===
     0 |   r0 = fetch @name
     1 |   assign @name = r0
     3 |   assign <template> = T0
     4 |   r1 = const_str T1
     5 |   r2 = ref &mut <template>
     6 |   append r2 r1
     7 |   r3 = ref &@name
     8 |   r4 = ref &mut <template>
     9 |   append r4 r3
    10 |   r5 = const_str T2
    11 |   r6 = ref &mut <template>
    12 |   append r6 r5
    13 |   r7 = take <template>
    14 |   r8 = take @name
    15 |   commit @name = r8
    16 |   return r7

    ; r0 (@name) : String
    ; r1 (v5) : &str
    ; r2 (<template>.) : &mut String
    ; r3 (@name.) : &String
    ; r4 (<template>.) : &mut String
    ; r5 (v9) : &str
    ; r6 (<template>.) : &mut String
    ; r7 (v11) : String
    ; r8 (v12) : String
    ; r9 (v3) : String
    ; r10 (@name) : String
    ; r11 (<template>) : String
