acvus-mir-test/tests/snapshots/all__e2e__multiple_closures_same_capture.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 1007
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = closure L1 []
    11 |   r9 = call #3(r7, r8)
    12 |   r10 = call #4(r9)
    13 |   assign x = r10
    15 |   r11 = ref &x
    16 |   r12 = call #5(r11)
    17 |   assign out = r12
    19 |   r13 = ref &out
    20 |   r14 = call #6(r13)
    21 |   r15 = string_concat [T0, T0, T0, T0, r14]
    22 |   commit @items = r4
    23 |   return r15

    ; r0 (v26) : Vec<i64>
    ; r1 (v27) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v6) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Iterator<i64, Pure>
    ; r6 (v11) : Fn(i64) -> i64 with reads {@offset}
    ; r7 (map(...)) : Iterator<i64, Pure>
    ; r8 (v13) : Fn(&i64) -> Bool with reads {@offset}
    ; r9 (filter(...)) : Iterator<i64, Pure>
    ; r10 (collect(...)) : Vec<i64>
    ; r11 (x.) : &Vec<i64>
    ; r12 (len(...)) : u64
    ; r13 (out.) : &u64
    ; r14 (to_string(...)) : String
    ; r15 (v24) : String
    ; r16 (@items) : Vec<i64>
    ; r17 (v25) : Vec<i64>
    ; r18 (items) : Vec<i64>
    ; r19 (v17) : String
    ; r20 (v21) : String
    ; r21 (out) : u64
    ; r22 (@items) : Vec<i64>
    ; r23 (items) : Vec<i64>
    ; r24 (v5) : String
    ; r25 (x) : Vec<i64>
    ; r26 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @offset
     3 |   r3 = r4 + r2
     4 |   commit @offset = r2
     5 |   return r3

    ; r0 (v9) : i64
    ; r1 (v10) : i64
    ; r2 (@offset) : i64
    ; r3 (v7) : i64
    ; r4 (v1) : i64
    ; r5 (@offset) : i64
    ; r6 (@offset) : i64
    ; r7 (i) : i64
    ; r8 (v8) : i64
    ; r9 (i) : i64

=== closure L1 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 0 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (i) : &i64
    ; r6 (i) : &i64
