acvus-mir-test/tests/snapshots/all__e2e__nested_tuple_pattern.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @data
     4 |   assign @data = r3
     6 |   assign <template> = T0
     7 |   r4 = ref &@data
     8 |   r5 = ref &(*r4)[0]
     9 |   r6 = ref &(*r4)[1]
    10 |   r7 = ref &(*r5)[0]
    11 |   r8 = ref &(*r5)[1]
    12 |   r9 = ref &mut <template>
    13 |   append r9 r6
    14 |   r10 = const_str T1
    15 |   r11 = ref &mut <template>
    16 |   append r11 r10
    18 |   r12 = take <template>
    19 |   r13 = take @data
    20 |   commit @data = r13 (not written)
    21 |   return r12

    ; r0 (v20) : &i64
    ; r1 (v21) : &i64
    ; r2 (v22) : &String
    ; r3 (@data) : ((i64, i64), String)
    ; r4 (@data.) : &((i64, i64), String)
    ; r5 ((*r5).[0]) : &(i64, i64)
    ; r6 (label) : &String
    ; r7 (a) : &i64
    ; r8 (b) : &i64
    ; r9 (<template>.) : &mut String
    ; r10 (v15) : &str
    ; r11 (<template>.) : &mut String
    ; r12 (v18) : String
    ; r13 (v19) : ((i64, i64), String)
    ; r14 (b) : &i64
    ; r15 (v3) : String
    ; r16 (v17) : Unit
    ; r17 (a) : &i64
    ; r18 (label) : &String
    ; r19 (@data) : ((i64, i64), String)
    ; r20 (label) : &String
    ; r21 (<template>) : String
