acvus-mir-test/tests/snapshots/all__e2e__object_destructure_match.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "\n"
  T2 = "none\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @user
     2 |   assign @user = r1
     4 |   assign <template> = T0
     5 |   jump L1
     6 | L1:
     8 |   if true (r2) -> L2 else L3 join L4
     9 | L2:
    11 |   jump L4(true (r3))
    12 | L3:
    14 |   jump L4(false (r4))
    15 | L4(r5: Bool):
    16 |   if r5 -> L5 else L6 join L7
    17 | L5:
    19 |   jump L7(true (r6))
    20 | L6:
    22 |   jump L7(false (r7))
    23 | L7(r8: Bool):
    24 |   jump_if r8 then L8 else L9
    25 | L8:
    26 |   r9 = take @user.name
    27 |   r10 = take @user.age
    28 |   assign age = r10
    29 |   r11 = ref &mut <template>
    30 |   r12 = string_clone r9
    31 |   append r11 r12
    32 |   r13 = ref &age
    33 |   r14 = call #0(r13)
    34 |   r15 = ref &mut <template>
    35 |   append r15 r14
    36 |   r16 = const_str T1
    37 |   r17 = ref &mut <template>
    38 |   append r17 r16
    40 |   jump L0(() (r18), r9)
    41 | L9:
    42 |   r19 = const_str T2
    43 |   r20 = ref &mut <template>
    44 |   append r20 r19
    46 |   jump L0(() (r21), r0)
    47 | L0(r22: Unit, r23: String):
    48 |   r24 = take <template>
    49 |   r25 = take @user
    50 |   commit @user = r25
    51 |   return r24

    ; r0 (v30) : String
    ; r1 (@user) : {age: i64, email: String, name: String}
    ; r2 (v5) : Bool
    ; r3 (v7) : Bool
    ; r4 (v8) : Bool
    ; r5 (v6) : Bool
    ; r6 (v10) : Bool
    ; r7 (v11) : Bool
    ; r8 (v9) : Bool
    ; r9 (name) : String
    ; r10 (age) : i64
    ; r11 (<template>.) : &mut String
    ; r12 (v34) : String
    ; r13 (age.) : &i64
    ; r14 (to_string(...)) : String
    ; r15 (<template>.) : &mut String
    ; r16 (v21) : &str
    ; r17 (<template>.) : &mut String
    ; r18 (v23) : Unit
    ; r19 (v24) : &str
    ; r20 (<template>.) : &mut String
    ; r21 (v26) : Unit
    ; r22 (v27) : Unit
    ; r23 (v33) : String
    ; r24 (v28) : String
    ; r25 (v29) : {age: i64, email: String, name: String}
    ; r26 (v3) : String
    ; r27 (v31) : String
    ; r28 (@user) : {age: i64, email: String, name: String}
    ; r29 (age) : i64
    ; r30 (<template>) : String
    ; r31 (v32) : String
    ; r32 (name) : String
    ; r33 (name) : String
