acvus-mir-test/tests/snapshots/all__e2e__object_pattern.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @user
     3 |   assign @user = r2
     5 |   assign <template> = T0
     6 |   r3 = take @user.name
     7 |   r4 = take @user.age
     8 |   r5 = ref &mut <template>
     9 |   append r5 r3
    10 |   r6 = const_str T1
    11 |   r7 = ref &mut <template>
    12 |   append r7 r6
    14 |   r8 = take <template>
    15 |   r9 = take @user
    16 |   commit @user = r9
    17 |   return r8

    ; r0 (v16) : String
    ; r1 (v17) : i64
    ; r2 (@user) : {age: i64, email: String, name: String}
    ; r3 (name) : String
    ; r4 (age) : i64
    ; r5 (<template>.) : &mut String
    ; r6 (v11) : &str
    ; r7 (<template>.) : &mut String
    ; r8 (v14) : String
    ; r9 (v15) : {age: i64, email: String, name: String}
    ; r10 (v3) : String
    ; r11 (name) : String
    ; r12 (name) : String
    ; r13 (@user) : {age: i64, email: String, name: String}
    ; r14 (<template>) : String
    ; r15 (v13) : Unit
    ; r16 (age) : i64
