acvus-mir-test/tests/snapshots/all__e2e__pipe_filter_then_map_field.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @users
     5 |   r4 = list []
     6 |   r5 = call #0(r4)
     8 |   r6 = call #1(r3)
     9 |   r7 = closure L0 []
    10 |   r8 = call #2(r6, r7)
    11 |   r9 = closure L1 []
    12 |   r10 = call #3(r8, r9)
    14 |   r11 = const_str T1
    15 |   r12 = call #4(r11)
    16 |   r13 = call #5(r10, r12)
    17 |   r14 = string_concat [T0, T0, T0, r13]
    18 |   commit @users = r5
    19 |   return r14

    ; r0 (v23) : Vec<{age: i64, name: String}>
    ; r1 (v24) : Vec<{age: i64, name: String}>
    ; r2 (v25) : Iterator<String, Pure>
    ; r3 (@users) : Vec<{age: i64, name: String}>
    ; r4 (v6) : Array<{age: i64, name: String}, 0>
    ; r5 (vec(...)) : Vec<{age: i64, name: String}>
    ; r6 (into_iter(...)) : Iterator<{age: i64, name: String}, Pure>
    ; r7 (v11) : Fn(&{age: i64, name: String}) -> Bool
    ; r8 (filter(...)) : Iterator<{age: i64, name: String}, Pure>
    ; r9 (v13) : Fn({age: i64, name: String}) -> String
    ; r10 (map(...)) : Iterator<String, Pure>
    ; r11 (v18) : &str
    ; r12 (to_string(...)) : String
    ; r13 (join(...)) : String
    ; r14 (v21) : String
    ; r15 (v22) : Vec<{age: i64, name: String}>
    ; r16 (@users) : Vec<{age: i64, name: String}>
    ; r17 (users) : Vec<{age: i64, name: String}>
    ; r18 (x) : Iterator<String, Pure>
    ; r19 (x) : Iterator<String, Pure>
    ; r20 (users) : Vec<{age: i64, name: String}>
    ; r21 (@users) : Vec<{age: i64, name: String}>
    ; r22 (v5) : String
    ; r23 (v16) : String
    ; r24 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2).age
     3 |   r3 = r1 > 18 (r4)
     4 |   return r3

    ; r0 (v7) : &{age: i64, name: String}
    ; r1 ((*r3).age) : i64
    ; r2 (v1) : &{age: i64, name: String}
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (v3) : &{age: i64, name: String}
    ; r6 (u) : &{age: i64, name: String}

=== closure L1 (ValueId(0)) ===
     0 |   assign u = r0
     1 |   r1 = take u.name
     2 |   return r1

    ; r0 (v1) : {age: i64, name: String}
    ; r1 (u.name) : String
    ; r2 (u) : {age: i64, name: String}
