acvus-mir-test/tests/snapshots/all__e2e__pipe_map_to_string_then_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   assign <template> = T0
     5 |   r3 = array_begin capacity=0
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = closure L1 []
    11 |   r9 = call #3(r7, r8)
    12 |   r10 = call #4(r9)
    13 |   assign x = r10
    14 |   r11 = ref &x
    15 |   r12 = call #5(r11)
    16 |   assign out = r12
    17 |   r13 = ref &out
    18 |   r14 = call #6(r13)
    19 |   r15 = ref &mut <template>
    20 |   append r15 r14
    21 |   r16 = take <template>
    22 |   commit @items = r4
    23 |   return r16

    ; r0 (v25) : Vec<i64>
    ; r1 (v26) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v7) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Items<i64>
    ; r6 (v11) : Fn(i64) -> i64
    ; r7 (map(...)) : Map<Items<i64>, i64, i64, Pure>
    ; r8 (v13) : Fn(&i64) -> Bool
    ; r9 (filter(...)) : Filter<Map<Items<i64>, i64, i64, Pure>, i64, Pure>
    ; r10 (collect(...)) : Vec<i64>
    ; r11 (x.) : &Vec<i64>
    ; r12 (len(...)) : u64
    ; r13 (out.) : &u64
    ; r14 (to_string(...)) : String
    ; r15 (<template>.) : &mut String
    ; r16 (v23) : String
    ; r17 (v3) : String
    ; r18 (items) : Vec<i64>
    ; r19 (items) : Vec<i64>
    ; r20 (@items) : Vec<i64>
    ; r21 (<template>) : String
    ; r22 (v24) : Vec<i64>
    ; r23 (@items) : Vec<i64>
    ; r24 (x) : Vec<i64>
    ; r25 (out) : u64

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 + 1 (r3)
     3 |   return r1

    ; r0 (v6) : i64
    ; r1 (v5) : i64
    ; r2 (v1) : i64
    ; r3 (v4) : i64
    ; r4 (i) : i64
    ; r5 (i) : i64

=== closure L1 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 != 0 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (i) : &i64
    ; r6 (i) : &i64
